# obos-aud

./: .gitignore  CMakeLists.txt  LICENSE  README.md
audctl/: CMakeLists.txt  audctl.c
include/obos-aud/: compiler.h  output.h  stream.h  trans.h
include/obos-aud/priv/: backend.h  con.h  mixer.h  obos-ioctls.h
libaustream/: CMakeLists.txt  stream.c
libautrans/: CMakeLists.txt  trans.c
src/: CMakeLists.txt  con.c  mixer.c  server_main.c  stream.c
src/backends/file/: CMakeLists.txt  impl.c
src/backends/obos-hda/: CMakeLists.txt  impl.c
test/: CMakeLists.txt  client_main.c
